# Finpathuiuxdesign

./: .env.example  .gitignore  AGENTS.md  FinPath Journey.html  INSPACE-GUIDE.md  PROJECT_CONTEXT.md  PROJECT_DESCRIPTION.md  README.md  build_error.txt  build_error_2.txt  build_error_3.txt  check_errors.cjs  correct_penny_purple.py  css_improvement.md  dashboardTest.html  fix_encoding.py  fix_encoding_final.py  package.json  patch_journey.cjs  patch_onboarding_debt.cjs  patch_onboarding_inc.cjs  patch_plan.cjs  pnpm-lock.yaml  render.yaml  scratch.js  temp_month.txt  todo.md  unify_penny_blue.py  unify_penny_purple.py  update-theme.js  vite.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit
.kilo/plans/: 1777816906538-eager-panda.md  1777823891451-tidy-star.md  1777874492422-witty-island.md  1777878300429-brave-cactus.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
backend/app/: auth.py  config.py  main.py
backend/app/agents/: penny.py  tools.py
backend/app/api/: penny.py  profile.py  simulate.py
backend/app/engines/: _helpers.py  affordability.py  debt_strategies.py  health_score.py  plan_engine.py  tax_engine.py
backend/app/services/: anonymize.py  cache.py  groq_client.py  logging.py  prompt.py  rate_limit.py  supabase_db.py
backend/db/migrations/: 001_init.sql
backend/tests/: conftest.py  test_affordability.py  test_agent_loop.py  test_chat_history_delete.py  test_debt_strategies.py  test_health_score.py  test_penny_recovery.py  test_plan_engine.py  test_prompt_context.py  test_tax_engine.py  test_tools.py
finPath_claude_extracted/design_handoff_finpath/: FinPath Dashboard.html  FinPath Landing.html  FinPath Logos v4.html  README.md
frontend/: .env.example  .lintstagedrc.json  .prettierignore  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/e2e/: auth.spec.ts  (+7 more)
half_done/: app.jsx  data.jsx  icons.jsx  layout.jsx  penny.jsx  screen-journey-month.jsx  screen-landing.jsx  screen-others.jsx  screen-scenarios.jsx  screen.dashboard.jsx  shared.jsx  store.jsx  style.css  theme.css  tweaks-panel.jsx
scripts/: dump-fixtures.ts
(+243 files in other folders)
